Fixed layout issues

--- a/data_management/assets/css/styles.css
+++ b/data_management/assets/css/styles.css
@@ -4020,6 +4020,10 @@
     width: var(--size);
     height: var(--size);
   }
+  .size-4 {
+    width: calc(var(--spacing) * 4);
+    height: calc(var(--spacing) * 4);
+  }
   .h-1 {
     height: calc(var(--spacing) * 1);
   }
@@ -6339,6 +6343,11 @@
   }
   .xl\:grid-cols-4 {
     @media (width >= 80rem) {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+  }
+  .\32 xl\:grid-cols-4 {
+    @media (width >= 96rem) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
